--- a/source/package.json
+++ b/source/package.json
@@ -25,12 +25,17 @@
   },
   "homepage": "https://github.com/open-omaha/omaha-parks#readme",
   "devDependencies": {
-    "browser-sync": "^2.18.12",
     "del": "^2.2.2",
-    "gulp": "^3.9.1",
-    "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^3.0.0",
-    "gulp-useref": "^3.1.2",
-    "run-sequence": "^1.2.2"
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-cache": "^0.4.6",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-imagemin": "^3.3.0",
+    "gulp-jshint": "^2.0.4",
+    "gulp-livereload": "^3.8.1",
+    "gulp-notify": "^3.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-ruby-sass": "^2.1.1",
+    "gulp-uglify": "^3.0.0"
   }
 }
