--- a/source/package.json
+++ b/source/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/open-omaha/omaha-parks#readme",
   "devDependencies": {
+    "gulp": "^3.9.1",
     "del": "^2.2.2",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-cache": "^0.4.6",
@@ -37,6 +38,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-ruby-sass": "^2.1.1",
     "gulp-uglify": "^3.0.0",
-    "run-sequence": "^1.2.2"
+    "run-sequence": "^1.2.2",
+    "browser-sync": "^2.18.12"
   }
 }
